syntax = "proto3";

package auth;

service UsersService {
  rpc CreateOne (CreateUser) returns (User) {}
}

message CreateUser {
  string username = 1;
  string email = 2;
  string password = 3;
}

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  string createdAt = 5;
  string updatedAt = 6;
}
